# PlanBoard

./: .env.example  .gitignore  README.md  UserManual.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  to-do.md
planboard/: graph.py  main.py  state.py
planboard/agents/: _base.py  appflow_agent.py  architecture_diagram_agent.py  chat_orchestrator.py  consistency_agent.py  constraints_agent.py  data_flow_agent.py  design_agent.py  executive_agent.py  finalizer_agent.py  folder_structure_agent.py  griller_agent.py  implementation_agent.py  module_planner_agent.py  orchestrator.py  prd_agent.py  rules_agent.py  schema_agent.py  structuring_agent.py  system_architecture_agent.py  system_design_agent.py  tech_stack_agent.py  tracker_agent.py  trd_agent.py  update_learnings_agent.py  updates_agent.py
planboard/tools/: __init__.py  ascii_tools.py  diff_tools.py  editor_tools.py  exceptions.py  file_tools.py  llm_tools.py  mermaid_tools.py  search_tools.py  tracker_tools.py  validation_tools.py
planboard/tui/: __init__.py  app.py  planboard.css
planboard/utils/: __init__.py  agent_utils.py  mermaid_render.py
planboard/watcher/: __init__.py  architecture_watcher.py  heartbeat.py  watcher_manager.py
planner/: graph.py  llm.py  main.py  state.py
planner/agents/: __init__.py  _base.py  appflow_agent.py  architecture_diagram_agent.py  chat_orchestrator.py  constraints_agent.py  design_agent.py  executive_agent.py  griller_agent.py  orchestrator.py  (+10 more)
tests/: test_files.py  test_graph.py  test_llm.py  test_prd_agent.py  test_tui.py  test_watcher.py
(+38 files in other folders)
