[project]
name = "plannerx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-anthropic>=1.4.6",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "textual>=8.2.7",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "watchfiles>=1.2.0",
]

[project.scripts]
planner = "planner.main:app"

[tool.uv]
package = true

[tool.setuptools]
packages = ["planner"]


